--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,15 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.24</version>
         </dependency>
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
 
         <!--for test-->
         <dependency>
